@@ -8,7 +8,7 @@
    <META NAME="GENERATOR" CONTENT="vi and eight fingers">
    <TITLE>libstdc++-v3 HOWTO:  Chapter 27</TITLE>
 <LINK REL=StyleSheet HREF="../lib3styles.css">
-<!-- $Id: howto.html,v 1.6 2001/07/09 19:37:01 pme Exp $ -->
+<!-- $Id: howto.html,v 1.7 2001/07/09 21:47:36 pme Exp $ -->
 </HEAD>
 <BODY>
 
@@ -438,7 +438,7 @@
       <PRE>
      #include <EM>any of the I/O headers such as ios, iostream, etc</EM>
 
-     std::sync_with_stdio(false);
+     std::ios::sync_with_stdio(false);
       </PRE>
    </P>
    <P>You must do this before performing any I/O via the C++ stream objects.
@@ -460,7 +460,7 @@
 <P CLASS="fineprint"><EM>
 Comments and suggestions are welcome, and may be sent to
 <A HREF="mailto:libstdc++@gcc.gnu.org">the mailing list</A>.
-<BR> $Id: howto.html,v 1.6 2001/07/09 19:37:01 pme Exp $
+<BR> $Id: howto.html,v 1.7 2001/07/09 21:47:36 pme Exp $
 </EM></P>
 
 
